Tue Jun 09 20:34:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py: Add setting of default_op.

Tue Jun 09 15:15:15 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py: Patch from James Aylett: wrap
	  delete_document() and search_structured().  Also, some whitespace
	  cleanups.

Thu May 14 21:37:45 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/__init__.py: Add FlaxError to the list of
	  exports.

Thu May 14 18:39:48 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py: Don't alter the initial dict.

Thu May 14 16:46:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py: Many updates to the client; add
	  document, schemas, search results.

Tue May 12 06:48:51 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py: Improve error output.

Sat May 09 16:29:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py,
	  flax/searchclient/unittests/createdb_test.py,
	  flax/searchclient/utils.py: More client stuff - nearly working, honest!

Sat May 09 13:45:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py,
	  flax/searchclient/unittests/createdb_test.py,
	  flax/searchclient/utils.py: Some better escaping, not that it works.

Sat May 09 12:59:50 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/client.py: use version prefix, and the right HTTP method.

Sat May 09 08:18:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchclient/__init__.py,flax/searchclient/client.py,
	  flax/searchclient/unittests/createdb_test.py,
	  flax/searchclient/unittests/testsettings.py,
	  flax/searchclient/utils.py: Small progress.

Sat May 09 00:04:44 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
